Fix left spacing and big forehead

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -403,7 +403,7 @@ iframe {
 
 @media (max-width: 992px) {
   .wrap-login100 {
-    padding: 177px 90px 33px 85px;
+    padding: 70px 90px 33px 85px;
   }
 
   .login100-pic {
@@ -417,7 +417,7 @@ iframe {
 
 @media (max-width: 768px) {
   .wrap-login100 {
-    padding: 100px 80px 33px 80px;
+    padding: 33px 80px 33px 80px;
   }
 
   .login100-pic {
@@ -431,6 +431,6 @@ iframe {
 
 @media (max-width: 576px) {
   .wrap-login100 {
-    padding: 100px 15px 33px 15px;
+    padding: 33px 15px 33px 15px;
   }
 }
